# audit-fence

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/guide/: examples.md  integration.md  multi-agent.md  persistence.md  snapshot.md  soft-enforcement.md  structured-claims.md
examples/: financial_report.py  langchain_agent.py  minimal.py  multi_agent_audit.py
src/audit_fence/: __init__.py  agent.py  compat.py  fence.py  group.py  matching.py  prompts.py  snapshot.py  snapshot_handler.py  tools.py  workflow.py
tests/: test_fence.py  test_multi_agent.py  test_snapshot.py  test_snapshot_handler.py  test_snapshot_manifest.py  test_workflow.py
