[project]
name = "audit-fence"
version = "0.9.0"
description = "Programmatic enforcement for LLM agent evidence — search-verified citations, deterministic validation, zero hallucinated evidence."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Xin Huang", email = "xin.huang@epfl.ch"},
]
keywords = [
    "llm", "audit", "hallucination", "citation", "evidence",
    "ai-agent", "langgraph", "langchain", "compliance", "traceability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
benchmark = [
    "edgartools>=5.33",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
]

[project.urls]
Homepage = "https://github.com/M-HuangX/audit-fence"
Repository = "https://github.com/M-HuangX/audit-fence"
Issues = "https://github.com/M-HuangX/audit-fence/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_fence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
